manifests/smokeping/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smokeping
  labels:
    app: smokeping
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: smokeping
  template:
    metadata:
      labels:
        app: smokeping
    spec:
      containers:
        - name: smokeping
          image: docker.io/linuxserver/smokeping:2.9.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: smokeping-config
        - name: data
          persistentVolumeClaim:
            claimName: smokeping-data
