manifests/smokeping/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smokeping
  labels:
    app: smokeping
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: smokeping
